--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
             <button onclick="clearDisplay()" class="operator-btn">C</button>
         </div>
     </div>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
